--- a/1512599_dagk/package.json
+++ b/1512599_dagk/package.json
@@ -7,10 +7,12 @@
     "react": "^16.6.0",
     "react-devtools": "^3.4.2",
     "react-dom": "^16.6.0",
+    "react-google-login": "^3.2.1",
     "react-redux": "^5.1.0",
     "react-redux-firebase": "^2.1.9",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "reactstrap": "^6.5.0",
     "redux": "^4.0.1"
   },
   "scripts": {
